option('use_git',
  type : 'boolean',
  value : true)

option('use_bin_dir',
  type : 'boolean',
  value : true,
  yield : true,
  description : 'use the bin directory as output')

option('use_vvl',
  type : 'boolean',
  value : false,
  description : 'VVL is used to develop and test functions in the raccoon renderer')
